Updated playable game.

--- a/index.html
+++ b/index.html
@@ -75,22 +75,23 @@
         <div id="bottom-frame" style="display: none;"></div>
 
         <div id="cr-stage">
+            <div id="msgs" class="text center"></div>
             <div id="loading" class="text left" style="display: none;"></div>
             <div id="stats" style="display: none;">
                 <div id="timer" class="text timer"></div>
                 <div id="carrots" class="text carrots"></div>
-                <div id="msgs" class="text center bottom"></div>
             </div>
             <div id="menu" style="display: none;">
-                <div id="menu-start" style="position: absolute; left: 75px">Start Game</div>
-                <div id="menu-howto" style="position: absolute; left: 248px">How to play</div>
-                <div id="menu-hiscore" style="position: absolute; left: 438px">Hiscores</div>
-                <div id="menu-credits" style="position: absolute; left: 620px">Credits</div>
+                <div id="menu-start" class="button" style="left: 75px">Start Game</div>
+                <div id="menu-howto" class="button" style="left: 248px">How to play</div>
+                <div id="menu-hiscore" class="button" style="left: 438px">Hiscores</div>
+                <div id="menu-credits" class="button" style="left: 620px">Credits</div>
             </div>
-            <div id="version" style="display: none;"></div>
         </div>
     </div>
     
-    <div id="logo"></div>
+    <div id="logo">
+        <div id="version" style="display: none;"></div>
+    </div>
 </body>
 </html>
