Updated playable web version.

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
     <p>
     It's a lovely day at farmers field. A great time for a hungry (ninja) rabbit to sneak in and <span class="keys">pull</span> 
     some carrots to eat. Too bad you weren't the only one with that idea. A horde of hungry opponents approaches fast! 
-    Pull as many carrots as you can in <span class="keys">5 minutes</span>. To fight your opponents, you must use ancient rabbitjutsu tactics. 
-    These are slightly unorthodox. Simply uhm ... fart to <span class="keys">push</span> your competition away or use a 
-    <span class="keys">Carrot-on-a-Fork</span> totem decoy to deceive opponents. The totem is spawned on your current position.
+    Pull as many carrots as you can in <span class="keys">3 minutes</span>. To fight your opponents, you must use ancient rabbitjutsu tactics. 
+    These are slightly unorthodox. Simply uhm ... fart to <span class="keys">push</span> your opponents away or use a 
+    <span class="keys">Carrot-on-a-Fork</span> totem decoy to deceive them. The totem is spawned on your current position.
     </p>
     <h1>Goal & Controls</h1>
-    <p>Collect as many carrots as possible in 5 minutes. Use the controls to move and repel opponents.</p>
+    <p>Collect as many carrots as possible in 3 minutes. Use the controls to move and repel opponents.</p>
     <ul>
         <li><span class="keys">Arrow keys</span> - Move your ninja rabbit on the map.</li>
         <li><span class="keys">Z (or Y)</span> - Hold down to pull a carrot from the ground. You need to be close to a carrot.</li>
@@ -67,7 +67,8 @@
         <p>Art and graphics - Stremena Tuzsuzova</p>
         <br />
         <p>Sound & Music - <a target="_blank" href="https://github.com/petarov/game-off-2012#sound-and-music">See here</a></p>
-    </div>    
+    </div>
+    <div id="dialog-restart" style="display: none;">Would you like to restart the game?</div>
     
     <div id="fps" style="display: none;"></div>
 
@@ -83,11 +84,15 @@
                 <div id="timer" class="text timer"></div>
                 <div id="carrots" class="text carrots"></div>
             </div>
+            <div id="in-menu" style="display: none;">
+                <div id="toggle-music"></div>
+                <div id="toggle-sfx"></div>
+            </div>
             <div id="menu" style="display: none;">
-                <div id="menu-start" class="button" style="left: 75px">Start Game</div>
-                <div id="menu-howto" class="button" style="left: 248px">How to play</div>
-                <div id="menu-hiscore" class="button" style="left: 438px">Hiscores</div>
-                <div id="menu-credits" class="button" style="left: 620px">Credits</div>
+                <div id="menu-start" class="button" style="left: 70px">Start Game</div>
+                <div id="menu-howto" class="button" style="left: 245px">How to play</div>
+                <div id="menu-hiscore" class="button" style="left: 435px">Hiscores</div>
+                <div id="menu-credits" class="button" style="left: 615px">Credits</div>
             </div>
         </div>
     </div>
@@ -95,19 +100,5 @@
     <div id="logo">
         <div id="version" style="display: none;"></div>
     </div>
-	
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-879456-6']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>	
 </body>
 </html>
