--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script type="text/javascript">
     _Globals = {
         env : 'dev',
-        version : '0.9.1',
+        version : '0.9.2',
         scene : 'splash'
         };
         //Crafty.modules({ 'crafty-debug-bar': 'DEV' }, function () {
@@ -100,5 +100,19 @@
     <div id="logo">
         <div id="version" style="display: none;"></div>
     </div>
+
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-879456-6']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script> 
 </body>
 </html>
