--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div id="dialog-credits" style="display: none;">
         <p>Game design and programming - Petar Petrov</p>
         <br />
-        <p>Art and graphics - Stremena Tuzsuzova</p>
+        <p>Art and graphics - <a target="_blank" href="http://stremena.com/">Stremena Tuzsuzova</a></p>
         <br />
         <p>Sound & Music - <a target="_blank" href="https://github.com/petarov/game-off-2012#sound-and-music">See here</a></p>
     </div>
