Added hiscores support msg.

--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
     <div id="logo">
         <div id="version" style="display: none;"></div>
     </div>
+<div style="margin: 0 auto; color: white; width: 1024px; text-align: center;">
+    Hiscores are temporary down due to problems with Playtomic service. :(( Waiting for their support to answer.
+</div>
 
 <script type="text/javascript">
 
