--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
     <div id="logo">
         <div id="version" style="display: none;"></div>
     </div>
-<div style="margin: 0 auto; color: white; width: 1024px; text-align: center;">
-    Hiscores are temporary down due to problems with Playtomic service. :(( Waiting for their support to answer.
+<div id="new" style="margin: 10px auto; color: white; width: 1024px; text-align: center;">
+    Hiscores are working again! Playtomic resolved their service issue.
 </div>
 
 <script type="text/javascript">
