--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <div id="logo">
         <div id="version" style="display: none;"></div>
     </div>
-<div id="new" style="margin: 10px auto; color: white; width: 1024px; text-align: center;">
+<div id="new" style="display: none; margin: 10px auto; color: white; width: 1024px; text-align: center;">
     Hiscores are working again! Playtomic resolved their service issue.
 </div>
 
