Updated playable game to v0.9.4

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- libraries -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="//api.playtomic.com/js/playtomic.v2.2.min.js"></script>
+    <script type="text/javascript" src="lib/playtomic.v2.2.min.js"></script>
     <script type="text/javascript" src="lib/crafty-0.5.3.js"></script>
     <script type="text/javascript" src="lib/underscore-min.js"></script>
     <script type="text/javascript" src="lib/backbone-min.js"></script>
@@ -28,11 +28,11 @@
     <script type="text/javascript" src="lib/require.js"></script>
     <!-- game -->
     <script type="text/javascript" src="src/bootstrap.js"></script>
-    <script type="text/javascript" src="src/hiscore.1.js"></script>
+    <script type="text/javascript" src="src/hiscore.js"></script>
     <script type="text/javascript">
     _Globals = {
         env : 'dev',
-        version : '0.9.3',
+        version : '0.9.4',
         scene : 'splash'
         };
         //Crafty.modules({ 'crafty-debug-bar': 'DEV' }, function () {
@@ -42,7 +42,7 @@
 
     <a href="https://github.com/petarov/game-off-2012"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub"></a>
 
-    <div id="dialog-save-score" style="display: none;">Send your score to the hiscores server ?</div>
+    <div id="dialog-save-score" style="display: none;">Publish your score in the hiscores chart?</div>
     <div id="dialog-score" style="display: none;"></div>
     <div id="dialog-howto" style="display: none;">
     <h1>Story</h1>
@@ -91,10 +91,10 @@
                 <div id="toggle-sfx"></div>
             </div>
             <div id="menu" style="display: none;">
-                <div id="menu-start" class="button" style="left: 70px">Start Game</div>
-                <div id="menu-howto" class="button" style="left: 245px">How to play</div>
-                <div id="menu-hiscore" class="button" style="left: 435px">Hiscores</div>
-                <div id="menu-credits" class="button" style="left: 615px">Credits</div>
+                <div id="menu-start" class="button" style="left: 76px">Play Game</div>
+                <div id="menu-howto" class="button" style="left: 248px">How to Play</div>
+                <div id="menu-hiscore" class="button" style="left: 438px">Hiscores</div>
+                <div id="menu-credits" class="button" style="left: 618px">Credits</div>
             </div>
         </div>
     </div>
@@ -102,9 +102,6 @@
     <div id="logo">
         <div id="version" style="display: none;"></div>
     </div>
-<div id="new" style="display: none; margin: 10px auto; color: white; width: 1024px; text-align: center;">
-    Hiscores are working again! Playtomic resolved their service issue.
-</div>
 
 <script type="text/javascript">
 
