--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@
 	     waitSeconds: 15,
 	     urlArgs : "bust=" + new Date().getTime(),
 	};    
-    </script> 
-    <script type="text/javascript" src="lib/require.js"></script>
-    
-	<script type="text/javascript">
+	
 	var Clay = Clay || {};
 	Clay.gameKey = "raginggardens";
 	Clay.readyFunctions = [];
@@ -49,14 +46,15 @@
 	    var clay = document.createElement("script");
 	    clay.src = ( "https:" == document.location.protocol ? "https://" : "http://" ) + "clay.io/api/api.js"; 
 	    var tag = document.getElementsByTagName("script")[0]; tag.parentNode.insertBefore(clay, tag);
-	} )();
-	</script>    
+	} )();	
+    </script> 
     <!-- game -->
+     <script type="text/javascript" src="lib/require.js"></script>
     <script type="text/javascript" src="src/bootstrap.js"></script>
 
     <a href="https://github.com/petarov/game-off-2012"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub"></a>
 
-    <div id="dialog-save-score" style="display: none;">Publish your score to the hiscores chart?</div>
+    <div id="dialog-save-score" style="display: none;">Publish to High Scores board?</div>
     <div id="dialog-score" style="display: none;"></div>
     <div id="dialog-howto" style="display: none;">
     <h1>Story</h1>
