--- a/index.html
+++ b/index.html
@@ -31,10 +31,32 @@
 	var require = {
 	     waitSeconds: 15,
 	     urlArgs : "bust=" + new Date().getTime(),
-	};    
+	};
+	
+	var Clay = Clay || {};
+	Clay.gameKey = "raginggardens";
+	Clay.readyFunctions = [];
+	Clay.ready = function( fn ) {
+	    Clay.readyFunctions.push( fn );
+	};
+	Clay.options = { debug: false, hideUI: true, fail: function() {
+	    console.log( "Couldn't connect to clay.io!" );
+	}};		
+	// When all is said & done ...
+    Clay.ready( function() {
+    	document.getElementById('clay-marker').style.display = 'none';
+        var script = document.createElement('script');
+        script.setAttribute("data-main", "src/bootstrap");
+        script.src = "lib/require.js";
+        document.getElementsByTagName('script')[0].parentNode.appendChild(script);        
+    });	
+	// load clay
+	( function() {
+	    var clay = document.createElement("script");
+	    clay.src = ( "https:" == document.location.protocol ? "https://" : "http://" ) + "clay.io/api/api.js"; 
+	    var tag = document.getElementsByTagName("script")[0]; tag.parentNode.insertBefore(clay, tag);
+	} )();
     </script> 
-    <!-- game -->
-	<script data-main="src/bootstrap.js" src="lib/require.js"></script>
 
     <a href="https://github.com/petarov/game-off-2012"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub"></a>
 
@@ -69,6 +91,7 @@
     <div id="dialog-restart" style="display: none;">Would you like to restart the game?</div>
     
     <div id="fps" style="display: none;"></div>
+    <p id="clay-marker" style="text-align: center; color: white;">loading from clay.io...</p>
 
     <div id="wrapper">
         <div id="left-frame" style="display: none;"></div>
@@ -94,7 +117,6 @@
             </div>
         </div>
     </div>
-    
     <div id="logo">
         <div id="version" style="display: none;"></div>
     </div>
