--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <!--     <a href="https://github.com/petarov/game-off-2012"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub"></a> -->
 
-    <div id="dialog-save-score" style="display: none;">Publish to High Scores board?</div>
+    <div id="dialog-save-score" style="display: none;">Publish your high score?</div>
     <div id="dialog-score" style="display: none;"></div>
     <div id="dialog-howto" style="display: none;">
     <h1>Story</h1>
@@ -71,7 +71,7 @@
     These are slightly unorthodox. Simply uhm ... fart to <span class="keys">push</span> your opponents away or use a 
     <span class="keys">Carrot-on-a-Fork</span> totem decoy to deceive them. The totem is spawned on your current position.
     </p>
-    <h1>Goal & Controls</h1>
+    <h1>Goal &amp; Controls</h1>
     <p>Collect as many carrots as possible in 3 minutes. Use the controls to move and repel opponents.</p>
     <ul>
         <li><span class="keys">Arrow keys</span> - Move your ninja rabbit on the map.</li>
@@ -82,11 +82,11 @@
     </ul>
     </div>
     <div id="dialog-credits" style="display: none;">
-        <p>Game design and programming - Petar Petrov</p>
+        <p>Game design and programming - <a href="http://petarov.vexelon.net">Petar Petrov</a></p>
         <br />
-        <p>Art and graphics - <a target="_blank" href="http://stremena.com/">Stremena Tuzsuzova</a></p>
+        <p>Art and graphics - <a href="http://stremena.com/">Stremena Tuzsuzova</a></p>
         <br />
-        <p>Sound &amp; Music - <a target="_blank" href="https://github.com/petarov/game-off-2012#sound-and-music">See here</a></p>
+        <p>Sound and Music - <a href="https://github.com/petarov/game-off-2012#sound-and-music">See here</a></p>
     </div>
     <div id="dialog-restart" style="display: none;">Would you like to restart the game?</div>
     
